--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,9 @@
         <java.version>1.8</java.version>
         <junit-version>4.12</junit-version>
         <compiler-plugin-version>3.1</compiler-plugin-version>
+
+        <jaxb.version>2.3.0</jaxb.version>
+        <jaxws.version>2.3.0</jaxws.version>
     </properties>
 
     <dependencyManagement>
@@ -107,9 +110,9 @@
             </dependency>
 
             <!--<dependency>-->
-                <!--<groupId>com.github.msemys</groupId>-->
-                <!--<artifactId>esjc</artifactId>-->
-                <!--<version>2.0.0</version>-->
+            <!--<groupId>com.github.msemys</groupId>-->
+            <!--<artifactId>esjc</artifactId>-->
+            <!--<version>2.0.0</version>-->
             <!--</dependency>-->
 
             <dependency>
@@ -152,6 +155,33 @@
                 <groupId>org.apache.commons</groupId>
                 <artifactId>commons-csv</artifactId>
                 <version>1.5</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>javax.annotation</groupId>
+                <artifactId>javax.annotation-api</artifactId>
+                <version>${javax-annotation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.bind</groupId>
+                <artifactId>jaxb-impl</artifactId>
+                <version>${jaxb.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.ws</groupId>
+                <artifactId>jaxws-api</artifactId>
+                <version>${jaxws.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.sun.xml.ws</groupId>
+                <artifactId>jaxws-rt</artifactId>
+                <version>${jaxws.version}</version>
             </dependency>
 
             <!-- testing stuff -->
