--- a/club-manager-springboot-app/src/main/resources/application.yml
+++ b/club-manager-springboot-app/src/main/resources/application.yml
@@ -1,3 +1,14 @@
 security:
-  user:
-    password: password
+  oauth2:
+    client:
+      clientId: 491896501327-ju1tptdg1s6d54ve6uk2530iak44amep.apps.googleusercontent.com
+      clientSecret: gc-P5u5yV3HZtgd0kPLMXBqG
+      userAuthorizationUri: https://accounts.google.com/o/oauth2/v2/auth
+#      accessTokenUri: https://www.googleapis.com/oauth2/v4/token
+      useCurrentUri: false
+      preEstablishedRedirectUri: http://localhost:8080/login
+      scope: openid profile email
+      clientAuthenticationScheme: form
+    resource:
+      tokenInfoUri: https://www.googleapis.com/oauth2/v3/tokeninfo
+      userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
