oauth authentication works (first basic implementation) including machine 2 machine

--- a/club-manager-eventstore-iface/pom.xml
+++ b/club-manager-eventstore-iface/pom.xml
@@ -20,7 +20,10 @@
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-commons-ddd</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
         <!-- 3rd party -->
 
 
