--- a/club-manager-eventstore/pom.xml
+++ b/club-manager-eventstore/pom.xml
@@ -18,6 +18,10 @@
         <!-- project dependencies -->
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-commons-ddd</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-eventstore-iface</artifactId>
         </dependency>
 
