--- a/club-manager-eventstore-rest-client/pom.xml
+++ b/club-manager-eventstore-rest-client/pom.xml
@@ -21,6 +21,10 @@
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-eventstore-iface</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-commons-ddd</artifactId>
+        </dependency>
 
         <!-- 3rd party -->
         <dependency>
