started implementing event store using akka

--- a/club-manager-eventstore-akka/src/main/resources/application.conf
+++ b/club-manager-eventstore-akka/src/main/resources/application.conf
@@ -3,7 +3,9 @@ include "general.conf"
 akka {
 
   //  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  // loglevel = "INFO"
+  //loggers = ["akka.event.Logging$DefaultLogger"]
+  //stdout-loglevel = "OFF"
+  //loglevel = "OFF"
   //  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   //  actor {
@@ -53,7 +55,7 @@ akka {
 slick {
   driver = "slick.driver.PostgresDriver$"
   db {
-    url = "jdbc:postgresql://localhost:5432/mydb"
+    url = "jdbc:postgresql://localhost:5432/eventdb"
     user = "postgres"
     password = "password"
     driver = "org.postgresql.Driver"
