add event tagging and almost finished catchup subscription for akka

--- a/club-manager-eventstore-akka/src/main/resources/application.conf
+++ b/club-manager-eventstore-akka/src/main/resources/application.conf
@@ -157,7 +157,12 @@ slick {
 //}
 
 jdbc-journal {
-
+  event-adapters {
+    tagging = "org.jaun.clubmanager.eventstore.akka.TaggingEventAdapter"
+  }
+  event-adapter-bindings {
+      "org.jaun.clubmanager.eventstore.akka.EventDataWithStreamId" = tagging
+    }
   slick = ${slick}
 }
 
