--- a/club-manager-person/pom.xml
+++ b/club-manager-person/pom.xml
@@ -27,6 +27,12 @@
             <type>jar</type>
         </dependency>
 
+        <dependency>
+            <groupId>org.jaun.club-manager</groupId>
+            <artifactId>club-manager-eventstore-akka</artifactId>
+            <type>jar</type>
+        </dependency>
+
         <!-- 3rd party -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
