--- a/club-manager-springboot-app/pom.xml
+++ b/club-manager-springboot-app/pom.xml
@@ -26,10 +26,10 @@
             <artifactId>club-manager-member</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.jaun.club-manager</groupId>
-            <artifactId>club-manager-eventstore</artifactId>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.jaun.club-manager</groupId>-->
+            <!--<artifactId>club-manager-eventstore</artifactId>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.jaun.club-manager</groupId>
