--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-eventstore-akka</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-person</artifactId>
                 <version>${project.version}</version>
             </dependency>
