--- a/club-manager-eventstore-akka/src/main/resources/application.conf
+++ b/club-manager-eventstore-akka/src/main/resources/application.conf
@@ -4,7 +4,7 @@ akka {
 
   //  loggers = ["akka.event.slf4j.Slf4jLogger"]
   //loggers = ["akka.event.Logging$DefaultLogger"]
-  //stdout-loglevel = "OFF"
+  stdout-loglevel = "DEBUG"
   //loglevel = "OFF"
   //  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
