make database url configurable with env variable

--- a/club-manager-eventstore-akka/src/main/resources/application.conf
+++ b/club-manager-eventstore-akka/src/main/resources/application.conf
@@ -55,9 +55,10 @@ akka {
 slick {
   driver = "slick.driver.PostgresDriver$"
   db {
-    url = "jdbc:postgresql://localhost:5432/eventdb"
-    user = "postgres"
-    password = "password"
+    url = "jdbc:postgresql://localhost:5432/eventdb?user=postgres&password=password"
+    url = ${?JDBC_DATABASE_URL}
+    //user = "postgres"
+    //password = "password"
     driver = "org.postgresql.Driver"
 
     // hikariCP
