--- a/club-manager-springboot-app/src/main/resources/application.yml
+++ b/club-manager-springboot-app/src/main/resources/application.yml
@@ -15,3 +15,11 @@ security:
     resource:
       tokenInfoUri: https://www.googleapis.com/oauth2/v3/tokeninfo
       userInfoUri: https://www.googleapis.com/oauth2/v3/userinfo
+
+
+spring:
+  mvc:
+    throw-exception-if-no-handler-found: true
+    exclude-mapping: /api/**
+  resources:
+    add-mappings: false
