start implementing json serializer for akka

--- a/club-manager-eventstore-akka/src/main/resources/application.conf
+++ b/club-manager-eventstore-akka/src/main/resources/application.conf
@@ -8,17 +8,16 @@ akka {
   //loglevel = "OFF"
   //  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
-  //  actor {
-  //    provider = "cluster"
-  //
-  //    serializers {
-  //      java = "akka.serialization.JavaSerializer"
-  //    }
-  //
-  //    serialization-bindings {
-  //      "java.io.Serializable" = java
-  //    }
-  //  }
+  actor {
+    //provider = "cluster"
+    serializers {
+     java = "org.jaun.clubmanager.eventstore.akka.JsonSerializer",
+    }
+
+    serialization-bindings {
+      "java.io.Serializable" = java
+    }
+  }
   //  remote {
   //    log-remote-lifecycle-events = off
   //    netty.tcp {
