fix variable for person url

--- a/club-manager-springboot-app/src/main/resources/application.yml
+++ b/club-manager-springboot-app/src/main/resources/application.yml
@@ -32,7 +32,7 @@ machine2machine:
 
 webServices:
   personService:
-    url: ${WS_PERSON_SERVICE_URL:http://localhost:8080/api/persons}
+    url: ${PERSONS_URL:http://localhost:8080/api/persons}
 
 akkaEventStore:
   actorSystemName: eventStore
