--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
-        <junit-version>4.12</junit-version>
+        <junit-version>5.1.0</junit-version>
         <compiler-plugin-version>3.1</compiler-plugin-version>
 
         <jaxb.version>2.3.0</jaxb.version>
@@ -38,6 +38,13 @@
                 <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-eventstore-iface</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-eventstore-iface</artifactId>
+                <version>${project.version}</version>
+                <type>test-jar</type>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
@@ -203,9 +210,15 @@
 
             <!-- testing stuff -->
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit-version}</version>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-api</artifactId>
+                <version>5.1.0</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.junit.jupiter</groupId>
+                <artifactId>junit-jupiter-engine</artifactId>
+                <version>5.1.0</version>
                 <scope>test</scope>
             </dependency>
 
