add tests for AbstractAkkaCatchUpSubscriptionTest

--- a/club-manager-eventstore-akka/src/test/resources/application.conf
+++ b/club-manager-eventstore-akka/src/test/resources/application.conf
@@ -4,3 +4,12 @@ akka {
     snapshot-store.plugin = "inmemory-snapshot-store"
   }
 }
+
+inmemory-journal {
+    event-adapters {
+       tagging = "org.jaun.clubmanager.eventstore.akka.TaggingEventAdapter"
+    }
+    event-adapter-bindings {
+      "org.jaun.clubmanager.eventstore.akka.EventDataWithStreamId" = tagging
+    }
+}
