--- a/club-manager-eventstore-akka/pom.xml
+++ b/club-manager-eventstore-akka/pom.xml
@@ -28,10 +28,6 @@
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-eventstore-iface</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.jaun.club-manager</groupId>
-            <artifactId>club-manager-commons-projection</artifactId>
-        </dependency>
 
         <!-- 3rd party -->
         <dependency>
@@ -118,7 +114,6 @@
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest</artifactId>
-            <version>2.1</version>
         </dependency>
 
         <dependency>
@@ -130,6 +125,7 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-testkit_2.11</artifactId>
             <version>${akka.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
