--- a/club-manager-eventstore-iface/pom.xml
+++ b/club-manager-eventstore-iface/pom.xml
@@ -20,12 +20,17 @@
             <groupId>org.jaun.club-manager</groupId>
             <artifactId>club-manager-commons-ddd</artifactId>
         </dependency>
+
+
+        <!-- 3rd party -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-        <!-- 3rd party -->
-
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
 
         <!-- testing stuff -->
         <dependency>
