--- a/club-manager-commons-ddd/pom.xml
+++ b/club-manager-commons-ddd/pom.xml
@@ -26,5 +26,19 @@
             <artifactId>guava</artifactId>
         </dependency>
 
+        <!-- test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest</artifactId>
+            <version>2.1</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
