--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.5.RELEASE</version>
+        <version>2.1.4.RELEASE</version>
         <relativePath/>
         <!--  lookup parent from repository  -->
     </parent>
@@ -172,14 +172,14 @@
             <dependency>
                 <groupId>com.hazelcast</groupId>
                 <artifactId>hazelcast-all</artifactId>
-                <version>3.9.3</version>
+                <version>3.12</version>
             </dependency>
 
-            <dependency>
-                <groupId>com.hazelcast</groupId>
-                <artifactId>hazelcast-client</artifactId>
-                <version>3.9.3</version>
-            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>com.hazelcast</groupId>-->
+<!--                <artifactId>hazelcast-client</artifactId>-->
+<!--                <version>3.12</version>-->
+<!--            </dependency>-->
 
             <dependency>
                 <groupId>commons-io</groupId>
@@ -478,7 +478,6 @@
         <module>club-manager-commons-ddd</module>
         <module>club-manager-eventstore-iface</module>
         <module>club-manager-commons-ddd-es</module>
-        <module>club-manager-identity</module>
         <module>club-manager-person</module>
         <module>club-manager-member</module>
         <module>club-manager-eventstore-akka</module>
