implement deletion of a subscription

--- a/pom.xml
+++ b/pom.xml
@@ -233,19 +233,27 @@
             </dependency>
 
             <!-- testing stuff -->
-            <dependency>
-                <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-api</artifactId>
-                <version>5.4.0-M1</version>
-                <scope>test</scope>
-            </dependency>
 
             <dependency>
                 <groupId>org.junit.jupiter</groupId>
-                <artifactId>junit-jupiter-engine</artifactId>
-                <version>5.4.0-M1</version>
+                <artifactId>junit-jupiter</artifactId>
+                <version>5.4.2</version>
                 <scope>test</scope>
             </dependency>
+
+<!--            <dependency>-->
+<!--                <groupId>org.junit.jupiter</groupId>-->
+<!--                <artifactId>junit-jupiter-api</artifactId>-->
+<!--                <version>5.4.2</version>-->
+<!--                <scope>test</scope>-->
+<!--            </dependency>-->
+
+<!--            <dependency>-->
+<!--                <groupId>org.junit.jupiter</groupId>-->
+<!--                <artifactId>junit-jupiter-engine</artifactId>-->
+<!--                <version>5.4.2</version>-->
+<!--                <scope>test</scope>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest</artifactId>
