--- a/club-manager-commons-ddd/pom.xml
+++ b/club-manager-commons-ddd/pom.xml
@@ -29,7 +29,8 @@
         <!-- test -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
+            <artifactId>junit-jupiter</artifactId>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hamcrest</groupId>
