--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@
             </dependency>
             <dependency>
                 <groupId>org.jaun.club-manager</groupId>
+                <artifactId>club-manager-masterdata</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jaun.club-manager</groupId>
                 <artifactId>club-manager-person</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -486,6 +491,7 @@
         <module>club-manager-commons-ddd</module>
         <module>club-manager-eventstore-iface</module>
         <module>club-manager-commons-ddd-es</module>
+        <module>club-manager-masterdata</module>
         <module>club-manager-person</module>
         <module>club-manager-member</module>
         <module>club-manager-eventstore-akka</module>
