--- a/club-manager-masterdata/pom.xml
+++ b/club-manager-masterdata/pom.xml
@@ -36,6 +36,12 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+<!--            <version>2.9.8</version>-->
+        </dependency>
+
 
         <dependency>
             <groupId>com.googlecode.libphonenumber</groupId>
